<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HomeBrain1</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start">Start</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="garage">Puerta-Garage</string>
    <string name="kitchen">Luz-Cocina</string>
    <string name="lounge">Luz-Sala</string>
    <string name="parents">Luz-Dormitorio Padres</string>
    <string name="children">Luz-Dormitorio Hijos</string>
    <string name="radio">Radio</string>
    <string name="tv">TV</string>

</resources>
