<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/TableLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center" >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lounge"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdLouge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="LoungeControl"
            android:text="@string/lounge" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <TextView
            android:id="@+id/TextView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kitchen"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdKitchen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="KitchenControl"
            android:text="@string/kitchen" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/TextView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garage"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdGarage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="GarageControl"
            android:text="@string/garage" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/TextView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parents"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdParents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ParentsControl"
            android:text="@string/parents" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/TextView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/children"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdChildren"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="ChildrenControl"
            android:text="@string/children" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/TextView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="RadioControl"
            android:text="@string/radio" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center" >
        
        <TextView
            android:id="@+id/TextView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv"
            android:textSize="25sp" />

        <ToggleButton
            android:id="@+id/cmdTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="TVControl"
            android:text="@string/tv" />

    </TableRow>

</TableLayout>
